# ai-meeting-notes

./: .gitignore  README.md  main.py  pyproject.toml
.streamlit/: config.toml
prompts/meeting-notes/: default.txt
src/: __init__.py  audio.py  audio_processor.py  config.py  file_manager.py  meeting_notes.py  streamlit_ui.py  transcription.py  ui.py
